ensure admin menu is visible

--- a/nlp/admin/web/src/app/nlp-admin-app.component.css
+++ b/nlp/admin/web/src/app/nlp-admin-app.component.css
@@ -64,3 +64,7 @@
 .select-application{
   width:200px;
 }
+
+.main {
+  min-height: 80vh;
+}
